--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -724,11 +724,9 @@
 
 
 <section id="tp-lovable-supabase" class="tp-section">
-  <H1>Partie 1 (version “copier-coller”, resserrée et prête à l’emploi)</H1>
-
-  <h3>TP – Créer un site Web no-code avec Lovable + collecte de données via Supabase</h3>
-  <p><strong>Ressources &amp; culture numérique 3 – BUT Tech de Co (2ᵉ année)</strong></p>
-
+ 
+  <H1>Utilisation de systèmes d'Intelligence Artificielle Générative – Créer un site Web no-code avec Lovable + collecte de données via Supabase</H1>
+  
   <h4>Objectifs pédagogiques</h4>
   <p>À l’issue du TP, vous serez capable de :</p>
   <ul>
@@ -753,14 +751,6 @@
   <ol>
     <li>Aller sur <code>lovable.app</code>.</li>
     <li>Créer un compte ou se connecter.</li>
-    <li>Dans le tableau de bord, cliquer <strong>Create new</strong>.</li>
-  </ol>
-  <p><strong>Checkpoint A (à montrer)</strong></p>
-  <ul>
-    <li>Capture du <strong>dashboard</strong> Lovable avec le <strong>nom du projet</strong>.</li>
-    <li><strong>URL</strong> interne/provisoire si présente.</li>
-  </ul>
-
   <hr>
 
   <h3>2. Générer un site “1-page” rapide et le publier (10–15 min)</h3>
@@ -769,9 +759,9 @@
     <li>Renseigner <strong>titre</strong> + <strong>courte description</strong> (ex. « Pizzeria Lov’Pizza – réservations en ligne »).</li>
     <li>Cliquer <strong>Generate</strong> puis <strong>Publish</strong> (URL publique).</li>
   </ol>
-  <p><strong>Checkpoint B (à montrer)</strong></p>
+  <p><strong>Checkpoint 1 (à montrer)</strong></p>
   <ul>
-    <li><strong>URL publique</strong> de la 1ʳᵉ version (+ capture du héros/CTA).</li>
+    <li><strong>URL publique</strong> de la 1ʳᵉ version.</li>
   </ul>
 
   <hr>
