--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -761,7 +761,7 @@
   </ol>
   <p><strong>Checkpoint 1 (à montrer)</strong></p>
   <ul>
-    <li><strong>URL publique</strong> de la 1ʳᵉ version.</li>
+    <li><strong>Site Web/URL publique</strong> de la 1ʳᵉ version.</li>
   </ul>
 
   <hr>
