--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -773,7 +773,7 @@
   <blockquote>
     <p><strong>Rôle</strong> : Tu es concepteur·ice no-code expert·e Lovable.</p>
     <p><strong>But</strong> : Générer un site Web <strong>en français</strong>, style <strong>italien traditionnel</strong>, ton <strong>léger/humoristique</strong>, <strong>responsive</strong> (mobile &amp; desktop).</p>
-    <p><strong>Pages</strong> : Accueil (héros + CTA « Réserver maintenant »), Menu (classiques + originales), Réservation (formulaire), Notre histoire, Contact (adresse, horaires, plan, réseaux).</p>
+    <p><strong>Pages</strong> : Accueil, Menu (classiques + originales), Réservation (formulaire), Notre histoire, Contact (adresse, horaires, plan, réseaux).</p>
     <p><strong>Formulaire (obligatoire) → <u>noms de champs EXACTS</u> (prépa Supabase)</strong> :</p>
     <ul>
       <li><code>first_name</code> (Prénom, requis)</li>
